--- a/proposal-config.yaml
+++ b/proposal-config.yaml
@@ -1,17 +1,11 @@
-whatsapp_bridge:
-    mxid: '@whatsappbot:darknet'
-ignore:
+users_ignore:
 - '@whatsappbot:darknet'
+
 menu:
     id: Menu id
     global_variables:
     - id: simple_flag
       value: Nice test
-
-    # We can have different types of nodes.
-    # if they start with:
-    # "m" -> Message
-    # "r" -> HTTP Request
 
     nodes:
     - id: 'm1'
@@ -23,13 +17,12 @@ menu:
       o_connection: 'm3'
       variable: name
 
-
     - id: 'm3'
-      text: "Nice talking to you **{name}**"
+      text: "Nice talking to you **{{name}}**"
       o_connection: 'm4'
 
     - id: 'm4'
-      text: "**{name}** please enter your ID number:"
+      text: "**{{name}}** please enter your ID number:"
       variable: dni
       validation: '{{ dni.isdigit() }}'
       cases:
@@ -37,6 +30,25 @@ menu:
         o_connection: 'm6'
       - id: false
         o_connection: 'm5'
+
+
+      variables:
+        name: results.0.name.first
+        email: results.0.email
+        city: results.0.location.city
+        version: version
+
+    - id: 'm5'
+      text: "**{{dni}}** is not an ID number"
+      o_connection: 'm4'
+
+    - id: 'm6'
+      text: "Thank you very much **{{name}}**, your ID number is {{dni}}"
+      o_connection: 'm7'
+
+    - id: 'm7'
+      text: "See you next time"
+      o_connection: 'm1'
 
     - id: 'r1'
       metohd: GET # POST
@@ -48,30 +60,10 @@ menu:
       # data:
       #   "user_email": "foo@foo.com"
       #   "phone": "{phone}"
-      variables:
-        name: results.0.name.first
-        email: results.0.email
-        city: results.0.location.city
-        version: version
-        # all_results: results
-        # all_results_names: results.[].name.first
-        # all_results_email: results.[].email
 
       response:
-        status:
+        cases:
           - id: 200
             o_connection: m5
           - id: 404
             o_connection: m6
-
-    - id: 'm5'
-      text: "**{dni}** is not an ID number"
-      o_connection: 'm4'
-
-    - id: 'm6'
-      text: "Thank you very much **{name}**, your ID number is {dni}"
-      o_connection: 'm7'
-
-    - id: 'm7'
-      text: "See you next time"
-      o_connection: 'm1'
