--- a/base-config.yaml
+++ b/base-config.yaml
@@ -1,5 +1,6 @@
+# Ignore a user group
 users_ignore:
-- '@whatsappbot:localhost'
+- '@whatsappbot:domain.com'
 
 utils:
   # Get the user phone, based in the user_id
@@ -16,73 +17,120 @@ menu:
     nodes:
     - id: 'm1'
       type: 'message'
-      text: "Bienvenido, este menú te ayudara a registrar producciones o proyecciones de tus cultivos"
-      o_connection: 'r1'
-
-    # Login en aicampo
-    - id: 'r1'
-      type: 'http_request'
-      method: POST # POST
-      url: https://api.aicampo.com/core/user/login
-
-      basic_auth:
-        login: "bot@admin.co"
-        password: "asdfgH123$"
-
-      data:
-        SOFTWARE: aicampo
-
-      # cookies:
-      #   token: signedToken
-
-      cases:
-        - id: 200
-          o_connection: r2
-        - id: default
-          o_connection: m4
-
-    # Obtener información del productor
-    - id: 'r2'
-      type: 'http_request'
-      method: GET # POST
-      url: https://api.aicampo.com/core/user/?where=mobile={{user_phone}}
-
-      basic_auth:
-        login: "bot@admin.co"
-        password: "asdfgH123$"
-
-      variables:
-        user_info: body
-
-      cases:
-        - id: 200
-          o_connection: m2
-        - id: default
-          o_connection: m4
-
+      text: This is a menu that helps you to get 3 random news items
+      o_connection: 'm2'
 
     - id: 'm2'
-      type: 'message'
-      text: "
-                {% for user in user_info %}
-                    **{{user['name']}}** Es un placer hablar contigo,
-                    hemos indentificado que eres un **{{user['rol']['name']}}**
-                {% endfor %}
-            "
-      o_connection: 'm3'
-
-    - id: 'm3'
       type: 'input'
       variable: opt
-      text: "Quieres conocer información de los produstos que tienes registrados? <br>1. Si<br>2. No"
+      text: "
+              We have the following categories:<br>
+              1️⃣ All<br>
+              2️⃣ National // Indian news only<br>
+              3️⃣ Business<br>
+              4️⃣ Sports<br>
+              5️⃣ World<br>
+              6️⃣ Politics<br>
+              7️⃣ Technology<br>
+              8️⃣ Startup<br>
+              9️⃣ Entertainment<br>
+              1️⃣0️⃣ Misc<br>
+              1️⃣1️⃣ Hatke<br>
+              1️⃣2️⃣ Science<br>
+              1️⃣3️⃣ Automobile<br>
+              Send your choice:
+            "
       validation: "{{ opt }}"
       cases:
         - id: 1
-          o_connection: m4
+          o_connection: r1
+          variables:
+            category: all
         - id: 2
+          o_connection: r1
+          variables:
+            category: national
+        - id: 3
+          o_connection: r1
+          variables:
+            category: business
+        - id: 4
+          o_connection: r1
+          variables:
+            category: sports
+        - id: 5
+          o_connection: r1
+          variables:
+            category: world
+        - id: 6
+          o_connection: r1
+          variables:
+            category: politics
+        - id: 7
+          o_connection: r1
+          variables:
+            category: technology
+        - id: 8
+          o_connection: r1
+          variables:
+            category: startup
+        - id: 9
+          o_connection: r1
+          variables:
+            category: entertainment
+        - id: 10
+          o_connection: r1
+          variables:
+            category: miscellaneous
+        - id: 11
+          o_connection: r1
+          variables:
+            category: hatke
+        - id: 12
+          o_connection: r1
+          variables:
+            category: science
+        - id: 13
+          o_connection: r1
+          variables:
+            category: automobile
+        - id: default
+          o_connection: m2
+
+
+    - id: 'r1'
+      type: 'http_request'
+      method: GET # POST
+      url: https://inshorts.deta.dev/news?category={{category}}
+
+      variables:
+        news: data
+
+      cases:
+        - id: 200
           o_connection: m4
+        - id: default
+          o_connection: m5
+
 
     - id: 'm4'
       type: 'message'
-      text: "No hemos podido indentificarnos"
+      text: "
+              {% for new in news %}
+                {% if loop.index0 < 3 %}
+                  {% set _new = news|random %}
+                  ---<br>
+                  **Title**: {{_new['title']}}<br>
+                  **Author**: {{_new['author']}}<br>
+                  **Date**: {{_new['date']}}<br>
+                  **Image**: {{_new['imageUrl']}}<br>
+                  {{_new['content']}}<br><br>
+                {% endif%}
+              {% endfor %}
+            "
       o_connection: 'm1'
+
+    - id: 'm5'
+      type: 'message'
+      text: "I did not find noting :("
+      o_connection: 'm2'
