--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,9 @@
 [tool.isort]
 profile = "black"
-force_to_top = "typing"
-from_first = true
-combine_as_imports = true
-known_first_party = ["mautrix", "maubot"]
 line_length = 99
+multi_line_output=3
+include_trailing_comma=true
 
 [tool.black]
 line-length = 99
-target-version = ["py38"]
+target-version = ["py39"]
