--- a/menuflow/example-config.yaml
+++ b/menuflow/example-config.yaml
@@ -21,6 +21,9 @@ server:
     # Set to "generate" to generate and save a new token at startup.
     unshared_secret: generate
 
+utils:
+  user_phone_regex: "^@(?P<user_prefix>.+)_(?P<number>[0-9]{8,}):.+$"
+
 logging:
     version: 1
     formatters:
